# json-ghost-mannequin-pipeline

./: .env.example  .gitignore  LICENSE  MCP_INTEGRATION.md  README.md  WARP.md  WARP_SETUP_GUIDE.md  mcp_config.json  pyproject.toml  setup_mcp.py
config/: style_kit.yml  tuning_rules.yml
deployment/huggingface/: handler.py
docs/: 1.1 CODE PHASE 1 1 .md  2.1 Code prompt weaving.md  3.1 code.rtf  4.1.rtf  5.1.rtf  6.1.rtf  PRD — JSON Photostudio.io Ghost-Mannequin Pipeline (Steps 1–6) .rtf
examples/advanced_dress/: custom_config.yml  run.sh
examples/basic_shirt/: run.sh
examples/batch_processing/: batch_run.sh
mcp_server/: photostudio_mcp.py  requirements.txt
scripts/: setup_environment.sh
src/photostudio/: __init__.py  cli.py
src/photostudio/steps/: __init__.py  step0_preclean.py  step1_color_refine.py  step1_preprocess.py  step2_prompt_weaver.py  step3_renderer.py  step4_qa_corrector.py  step5_delivery_engine.py  step6_feedback_engine.py
src/photostudio/utils/: __init__.py  cache_utils.py  hf_local.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/performance/: test_processing_speed.py
tests/quality/: test_reference_validation.py
tests/unit/: test_step1_preprocess.py
